force-app/main/default/objects/PaymentTerms__c/PaymentTerms__c.object-meta.xml
<CustomObject>
    <label>Payment Terms</label>
    <nameField>
        <label>Payment Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>