force-app/main/default/objects/PaymentTerms__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Short label of payment terms</description>
    <inlineHelpText>Short label of payment terms</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>