force-app/main/default/objects/PaymentTerms__c/fields/NameFull__c.field-meta.xml
<CustomField>
    <fullName>NameFull__c</fullName>
    <description>Full name of payment terms</description>
    <inlineHelpText>Full name of payment terms</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>