force-app/main/default/objects/PaymentTerms__c/fields/NameFullRus__c.field-meta.xml
<CustomField>
    <fullName>NameFullRus__c</fullName>
    <label>Full Name (Rus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>