force-app/main/default/objects/PaymentTerms__c/fields/NameRus__c.field-meta.xml
<CustomField>
    <fullName>NameRus__c</fullName>
    <description>Payment terms name in Russian</description>
    <inlineHelpText>Payment terms name in Russian</inlineHelpText>
    <label>Payment Terms Name (Rus)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>