force-app/main/default/objects/PaymentTerms__c/fields/NameUkr__c.field-meta.xml
<CustomField>
    <fullName>NameUkr__c</fullName>
    <inlineHelpText>Payment terms name in Ukrainian</inlineHelpText>
    <label>Payment Terms Name (Ukr)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>