force-app/main/default/objects/PaymentTerms__c/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the record does not appear in picklists.</inlineHelpText>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>