force-app/main/default/objects/PaymentTerms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameFull__c</columns>
    <columns>NameRus__c</columns>
    <columns>NameFullRus__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>